<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_0.5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_0.5">

        <ImageView
            android:id="@+id/start_state"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/cube_step_start_state"
            android:scaleType="centerInside" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/arrow_right"
            android:src="@drawable/arrow_right" />

        <ImageView
            android:id="@+id/end_state"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/cube_step_end_state"
            android:scaleType="centerInside" />

    </LinearLayout>

    <ListView
        android:id="@+id/algorithms_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_0.5"
        android:background="@color/gray_0.5"/>

</LinearLayout>